# vc

./: CMakeLists.txt  Prak4 Vc  fragment.glsl  main.py
assets/shaders/: fragment.glsl  vertex.glsl
framework/: CMakeLists.txt
libs/glew-2.1.0/: glew.pc
src/Game/: Cube.cpp  Cube.h  CubeWithNormals.h  Scene.cpp  Scene.h
